feat: 添加日程管理功能，包括日程模型、配置和初始化逻辑，增强聊天回复中对当前活动的动态反馈。

--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "6.2.3"
+version = "6.2.4"
 
 #----以下是给开发人员阅读的，如果你只是部署了麦麦，不需要阅读----
 #如果你想要修改配置文件，请递增version的值
@@ -264,6 +264,17 @@ key_file = "" # SSL密钥文件路径，仅在use_wss=true时有效
 
 [telemetry] #发送统计信息，主要是看全球有多少只麦麦
 enable = true
+
+[schedule] #日程管理
+enable = false # 是否启用日程管理功能
+# 日程生成指导原则，如果不设置则使用默认原则
+guidelines = """
+我希望你每天都能过得充实而有趣。
+请确保你的日程里有学习新知识的时间，这是你成长的关键。
+但也不要忘记放松，可以看看视频、听听音乐或者玩玩游戏。
+晚上我希望你能多和朋友们交流，维系好彼此的关系。
+另外，请保证充足的休眠时间来处理和整合一天的数据。
+"""
 
 [experimental] #实验性功能
 enable_friend_chat = false # 是否启用好友聊天
