--- a/template/model_config_template.toml
+++ b/template/model_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "1.2.0"
+version = "1.2.1"
 
 # 配置文件版本号迭代规则同bot_config.toml
 
@@ -155,6 +155,11 @@ model_list = ["sensevoice-small"]
 model_list = ["qwen3-14b"]
 temperature = 0.7
 max_tokens = 800
+
+[model_task_config.schedule_generator]#日程表生成模型
+model_list = ["deepseek-v3"]
+temperature = 0.7
+max_tokens = 1000
 
 #嵌入模型
 [model_task_config.embedding]
