增加视频识别板块 采用抽帧的方式识别视频，可以自己配置详细参数 -详细请看bot_config最底下 更改了template模板 多bb一句：我真的是被这个炸服了，改完这里那里就又炸了，但是总之现在没问题了

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 sqlalchemy
 APScheduler
-Pillow
 aiohttp
 aiohttp-cors
 colorama
@@ -58,3 +57,6 @@ toml>=0.10.0
 beautifulsoup4
 exa_py
 asyncddgs
+opencv-python
+Pillow
+asyncio
