--- a/src/plugins/built_in/web_search_tool/_manifest.json
+++ b/src/plugins/built_in/web_search_tool/_manifest.json
@@ -12,8 +12,8 @@
   "host_application": {
     "min_version": "0.10.0"
   },
-  "homepage_url": "https://github.com/MaiBot-Plus/mmc",
-  "repository_url": "https://github.com/MaiBot-Plus/mmc",
+  "homepage_url": "https://github.com/MaiBot-Plus/MaiMbot-Pro-Max",
+  "repository_url": "https://github.com/MaiBot-Plus/MaiMbot-Pro-Max",
   "keywords": ["web_search", "url_parser"],
   "categories": ["web_search", "url_parser"],
   
