--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,9 +3,7 @@ name: Docker Build and Push
 on:
   push:
     branches:
-      - main
-      - classical
-      - dev
+      - master
     tags:
       - "v*.*.*"
       - "v*"
