Update .gitignore and change Dockerfile workdir
Added MaiBot-dev.code-workspace to .gitignore to prevent it from being tracked. Changed the working directory in the Dockerfile from /MaiMBot to /mmc for consistency or project structure update.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ MaiBot-Napcat-Adapter-main
 MaiBot-Napcat-Adapter
 /test
 uv.lock
+MaiBot-dev.code-workspace
 /log_debug
 /src/test
 nonebot-maibot-adapter/
