--- a/template/model_config_template.toml
+++ b/template/model_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "1.2.3"
+version = "1.2.4"
 
 # 配置文件版本号迭代规则同bot_config.toml
 
@@ -143,6 +143,11 @@ max_tokens = 800
 [model_task_config.emotion] #负责麦麦的情绪变化
 model_list = ["siliconflow-deepseek-v3"]
 temperature = 0.3
+max_tokens = 800
+
+[model_task_config.maizone] # maizone模型
+model_list = ["siliconflow-deepseek-v3"]
+temperature = 0.7
 max_tokens = 800
 
 [model_task_config.vlm] # 图像识别模型
