--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "6.3.7"
+version = "6.3.8"
 
 #----以下是给开发人员阅读的，如果你只是部署了麦麦，不需要阅读----
 #如果你想要修改配置文件，请递增version的值
@@ -162,8 +162,8 @@ ban_msgs_regex = [
 
 [anti_prompt_injection] # LLM反注入系统配置
 enabled = true # 是否启用反注入系统
-enabled_rules = false # 是否启用规则检测
-enabled_LLM = true # 是否启用LLM检测
+enabled_rules = true # 是否启用规则检测
+enabled_LLM = false # 是否启用LLM检测
 process_mode = "lenient" # 处理模式：strict(严格模式，直接丢弃), lenient(宽松模式，消息加盾)
 
 # 白名单配置
