新增反击模式支持，允许在检测到提示词注入攻击时生成反击响应并发送。更新相关配置和处理逻辑，增强系统的防护能力。

--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -164,7 +164,7 @@ ban_msgs_regex = [
 enabled = true # 是否启用反注入系统
 enabled_rules = true # 是否启用规则检测
 enabled_LLM = false # 是否启用LLM检测
-process_mode = "lenient" # 处理模式：strict(严格模式，直接丢弃), lenient(宽松模式，消息加盾)
+process_mode = "lenient" # 处理模式：strict(严格模式，直接丢弃), lenient(宽松模式，消息加盾), auto(自动模式), counter_attack(反击模式，使用LLM反击并丢弃消息)
 
 # 白名单配置
 # 格式：[[platform, user_id], ...]
