feat(monthly_plan): 为月度计划添加数量上限
新增 `max_plans_per_month` 配置项，用于限制每个月可存在的最大月度计划数量。

现在，在向数据库添加新计划时，系统会检查当前月份的计划总数。如果添加新计划会导致总数超过上限，则只会添加允许数量内的计划，以防止计划池无限增长。

--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -416,11 +416,13 @@ centralized_config = true # 是否启用插件配置集中化管理
 # 是否启用本功能
 enable = true
 # 启动时，如果当月计划少于此数量，则触发LLM生成
-generation_threshold = 30
+generation_threshold = 20
 # 每次调用LLM期望生成的计划数量
-plans_per_generation = 5
+plans_per_generation = 4
 # 计划被使用后，被删除的概率 (0.0 到 1.0)
 deletion_probability_on_use = 0.5
+#每个月允许存在的最大计划数量
+max_plans_per_month = 30
 
 [wakeup_system]
 enable = true #"是否启用唤醒度系统"
