--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "asyncddgs>=0.1.0a1",
     "asyncio>=4.0.0",
     "beautifulsoup4>=4.13.4",
-    "cognee>=0.2.3",
+    "chromadb>=0.5.0",
     "colorama>=0.4.6",
     "cryptography>=45.0.5",
     "customtkinter>=5.2.2",
@@ -34,7 +34,7 @@ dependencies = [
     "numpy>=2.2.6",
     "openai>=1.95.0",
     "opencv-python>=4.11.0.86",
-    "packaging==24.1",
+    "packaging>=25.0",
     "pandas>=2.3.1",
     "peewee>=3.18.2",
     "pillow>=11.3.0",
