--- a/plugins/napcat_adapter_plugin/.gitignore
+++ b/plugins/napcat_adapter_plugin/.gitignore
@@ -1,65 +1,18 @@
-data/
-/image_sender_plugin/
-/voice_sender_plugin/
-/backups/
-data1/
-mongodb/
-NapCat.Framework.Windows.Once/
+
 log/
 logs/
 out/
-tool_call_benchmark.py
-run_maibot_core.bat
-run_voice.bat
-run_napcat_adapter.bat
-run_ad.bat
-s4u.s4u
-llm_tool_benchmark_results.json
-MaiBot-Napcat-Adapter-main
-MaiBot-Napcat-Adapter
-/test
-uv.lock
-MaiBot-dev.code-workspace
-/log_debug
-/src/test
-nonebot-maibot-adapter/
-MaiMBot-LPMM
-*.zip
-run.bat
-log_debug/
-run_amds.bat
-run_none.bat
-run.py
-cookies-*.json
-message_queue_content.txt
-message_queue_content.bat
-message_queue_window.bat
-message_queue_window.txt
-queue_update.txt
-memory_graph.gml
-/src/tools/tool_can_use/auto_create_tool.py
-/src/tools/tool_can_use/execute_python_code_tool.py
+
 .env
 .env.*
 .cursor
-config/bot_config_dev.toml
-config/bot_config.toml
-config/bot_config.toml.bak
-config/lpmm_config.toml
-config/lpmm_config.toml.bak
-template/compare/bot_config_template.toml
-template/compare/model_config_template.toml
-（测试版）麦麦生成人格.bat
-（临时版）麦麦开始学习.bat
-src/plugins/utils/statistic.py
-CLAUDE.md
-s4u.s4u
-s4u.s4u1
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-maibot_statistics.html
+uv.lock
+llm_statistics.txt
 mongodb
 napcat
 run_dev.bat
@@ -67,7 +20,7 @@ elua.confirmed
 # C extensions
 *.so
 /results
-uv.lock
+config_backup/
 # Distribution / packaging
 .Python
 build/
@@ -316,21 +269,11 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
-src/chat/focus_chat/working_memory/test/test1.txt
-src/chat/focus_chat/working_memory/test/test4.txt
-run_maiserver.bat
-src/plugins/test_plugin_pic/actions/pic_action_config.toml
-run_pet.bat
-/plugins/*
-!/plugins/set_emoji_like
-!/plugins/permission_example
-!/plugins/hello_world_plugin
-!/plugins/take_picture_plugin
-!/plugins/napcat_adapter_plugin
 
 config.toml
-
-interested_rates.txt
-MaiBot.code-workspace
-/tests
-/tests
+feature.toml
+config.toml.back
+test
+data/NapcatAdapter.db
+data/NapcatAdapter.db-shm
+data/NapcatAdapter.db-wal
