feat(maizone): 新增QQ空间互通组功能，根据聊天上下文生成说说
引入了全新的“QQ空间互通组”功能。用户可以配置多个群聊为一个互通组。
在通过指令发布说说时，系统会自动获取这些群聊的近期聊天记录作为上下文，从而生成与当前讨论话题更相关的说说内容。

- 在 `config.toml` 中新增了 `[maizone_intercom]` 配置项用于定义互通组。
- 重构并增强了动态（说说）的拉取逻辑，提高了对不同数据格式的兼容性和解析的稳定性。
- 对项目中的多个文件进行了代码清理，移除了未使用的导入，使代码更加整洁。

--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -482,9 +482,16 @@ chat_ids = [
     "222222"   # 假设这是“产品群”的ID
 ]
 
-[[cross_context.groups]]
-name = "日常闲聊组"
+[maizone_intercom]
+# QQ空间互通组配置
+# 启用后，发布说说时会读取指定互通组的上下文
+enable = false
+
+# 定义QQ空间互通组
+# 同一个组的chat_id会共享上下文，用于生成更相关的说说
+[[maizone_intercom.groups]]
+name = "Maizone默认互通组"
 chat_ids = [
-    "333333",  # 假设这是“吹水群”的ID
-    "444444"   # 假设这是“游戏群”的ID
+    "111111", # 示例群聊1
+    "222222"  # 示例群聊2
 ]
