refactor(llm_models): 移除官方Gemini客户端并改用aiohttp实现
官方的 `google-generativeai` 库存在一些问题且似乎已不再积极维护，导致依赖关系和稳定性方面存在风险。

为提高稳定性和可维护性，现已移除基于该官方库的 `gemini_client.py` 实现。相应地，在配置文件模板中，`client_type` 已从 "gemini" 更新为 "aiohttp_gemini"，以引导用户使用新的、基于 `aiohttp` 的异步客户端。

--- a/template/model_config_template.toml
+++ b/template/model_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "1.2.7"
+version = "1.2.8"
 
 # 配置文件版本号迭代规则同bot_config.toml
 
@@ -25,7 +25,7 @@ retry_interval = 10
 name = "Google"
 base_url = "https://api.google.com/v1"
 api_key = "your-google-api-key-1"
-client_type = "gemini"
+client_type = "aiohttp_gemini" # 官方的gemini客户端现在已经死了
 max_retry = 2
 timeout = 30
 retry_interval = 10
