feat(schedule): 引入弹性睡眠与睡前通知机制
新增了弹性睡眠功能，使AI的入睡行为更加自然。AI现在会根据睡眠压力决定是否延迟入睡，而不是严格按日程表时间立即休眠。

主要更新包括：
- **弹性睡眠逻辑**: 在进入理论睡眠时间时，会有一段5-10分钟的准备缓冲期。如果睡眠压力低于阈值，AI会推迟入睡，以增加互动时间。
- **睡前通知**: 在决定入睡后，AI可以自动向指定群组发送晚安消息。
- **配置选项**: 在配置文件中增加了相关选项，允许用户启用/禁用这些功能，并自定义睡眠压力阈值、最大延迟时间、通知群组和提示词。
- **代码重构**: 对 `is_sleeping` 方法进行了重构，将其拆分为理论睡眠时间判断和核心弹性逻辑，提高了代码的可读性和可维护性。

--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "6.5.6"
+version = "6.5.7"
 
 #----以下是给开发人员阅读的，如果你只是部署了麦麦，不需要阅读----
 #如果你想要修改配置文件，请递增version的值
@@ -377,6 +377,21 @@ guidelines = """
 另外，请保证充足的休眠时间来处理和整合一天的数据。
 """
 enable_is_sleep = false
+
+# --- 弹性睡眠与睡前消息 ---
+# 是否启用弹性睡眠。启用后，AI不会到点立刻入睡，而是会根据睡眠压力增加5-10分钟的缓冲，并可能因为压力不足而推迟睡眠。
+enable_flexible_sleep = true
+# 触发弹性睡眠的睡眠压力阈值。当AI的睡眠压力低于此值时，可能会推迟入睡。
+flexible_sleep_pressure_threshold = 40.0
+# 每日最大可推迟入睡的总分钟数。
+max_sleep_delay_minutes = 60
+
+# 是否在进入“准备入睡”状态时发送一条消息通知。
+enable_pre_sleep_notification = true
+# 接收睡前消息的群组列表。格式为: ["platform:group_id1", "platform:group_id2"]，例如 ["qq:12345678"]
+pre_sleep_notification_groups = []
+# 用于生成睡前消息的提示。AI会根据这个提示生成一句晚安问候。
+pre_sleep_prompt = "我准备睡觉了，请生成一句简短自然的晚安问候。"
 
 [video_analysis] # 视频分析配置
 enable = true # 是否启用视频分析功能
