--- a/.gitignore
+++ b/.gitignore
@@ -325,7 +325,7 @@ run_pet.bat
 !/plugins/set_emoji_like
 !/plugins/permission_example
 !/plugins/hello_world_plugin
-!/plugins/take_picture_plugin
+!/plugins/bilibli
 !/plugins/napcat_adapter_plugin
 !/plugins/echo_example
 
