feat(cross_context): 实现按互通组名称获取聊天记录
新增 `get_chat_history_by_group_name` API，允许插件按名称获取指定互通组的聊天记录。此功能增强了插件的上下文感知能力，使其能够利用跨群聊的对话历史。

主要变更：
- 在 `cross_context_api.py` 中添加了 `get_chat_history_by_group_name` 函数。
- Maizone 插件现在利用此 API 来获取跨群聊的上下文，以生成更相关的说说内容。
- 调整了配置文件模板，以反映新的互通组配置方式。

--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "6.7.1"
+version = "6.7.2"
 
 #----以下是给开发人员阅读的，如果你只是部署了MoFox-Bot，不需要阅读----
 #如果你想要修改配置文件，请递增version的值
@@ -490,13 +490,9 @@ chat_ids = [
     ["group", "1025509724"],   # 假设这是“产品群”的ID
     ["private", "123456789"] # 假设这是某个用户的私聊
 ]
-[maizone_intercom]
-# QQ空间互通组配置
-# 启用后，发布说说时会读取指定互通组的上下文
-enable = false
 # 定义QQ空间互通组
 # 同一个组的chat_id会共享上下文，用于生成更相关的说说
-[[maizone_intercom.groups]]
+[[cross_context.maizone_context_group]]
 name = "Maizone默认互通组"
 chat_ids = [
     ["group", "111111"], # 示例群聊1
