feat(config): 为小脑(sub-planner)新增独立模型和尺寸配置
为“小脑”（sub-planner）引入了独立的模型配置`planner_small`，使其可以与主planner（大脑）使用不同的、更轻量的模型，以提升并行处理性能。

同时，新增了`planner_size`配置项，用于控制每个小脑处理的action数量，允许用户根据需求调整并行度和单个小脑的上下文窗口。

- 在`model_config.toml`中添加`planner_small`任务配置
- 在`bot_config.toml`中添加`planner_size`参数
- 更新代码以使用新的配置项，并移除了相关的硬编码和TODO注释

--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -173,6 +173,9 @@ delta_sigma = 120 # 正态分布的标准差，控制时间间隔的随机程度
 # 实验建议：试试 proactive_thinking_interval=0 + delta_sigma 非常大 的纯随机模式！
 # 结果保证：生成的间隔永远为正数（负数会取绝对值），最小1秒，最大24小时
 
+# --- 大脑/小脑 Planner 配置 ---
+planner_size = 5.0 # 小脑（sub-planner）的尺寸，决定每个小脑处理多少个action。数值越小，并行度越高，但单个小脑的上下文越少。建议范围：3.0-8.0
+
 [relationship]
 enable_relationship = true # 是否启用关系系统
 relation_frequency = 1 # 关系频率，MoFox-Bot构建关系的频率
