feat(sleep): 为睡眠系统添加随机时间偏移功能
- 新增每日睡眠和起床时间随机偏移量配置选项
- 实现缓存机制确保同一天内使用相同的偏移量
- 重构睡眠时间检查逻辑以支持动态时间偏移
- 更新相关配置类和插件清单格式

--- a/src/plugins/built_in/set_typing_status/_manifest.json
+++ b/src/plugins/built_in/set_typing_status/_manifest.json
@@ -1,4 +1,6 @@
 {
+    
+    "manifest_version": 1,
     "name": "Set Typing Status",
     "description": "一个在LLM生成回复时设置私聊输入状态的插件。",
     "version": "1.0.0",
