fix(chat): 防止机器人回复自身消息
添加配置选项 `allow_reply_self` 控制是否允许机器人回复自己发送的消息
当此选项为 false 时，在回复动作执行前检查目标用户 ID，如果是机器人自身则跳过回复

同时删除无用的测试文件 `test_planner_personality.py

--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "6.8.1"
+version = "6.8.2"
 
 #----以下是给开发人员阅读的，如果你只是部署了MoFox-Bot，不需要阅读----
 #如果你想要修改配置文件，请递增version的值
@@ -122,6 +122,8 @@ enable_breaking_mode = true # 是否启用自动进入breaking模式，关闭后
 
 # 强制私聊回复
 force_reply_private = false # 是否强制私聊回复，开启后私聊将强制回复
+
+allow_reply_self = false # 是否允许回复自己说的话
 
 max_context_size = 25 # 上下文长度
 thinking_timeout = 40 # MoFox-Bot一次回复最长思考规划时间，超过这个时间的思考会放弃（往往是api反应太慢）
