feat(affinity_flow_chatter): 重构计划器以支持多动作并优化思考逻辑
本次提交对亲和流聊天器（AFC）的计划与决策核心进行了重大重构和功能增强，旨在提升其响应的灵活性、鲁棒性和可观测性。

主要变更包括：

1.  **多动作支持与解析重构**:
    -   `PlanFilter` 现在能够正确解析并处理 LLM 返回的动作列表（`"actions": [...]`），而不仅限于单个动作，这使得机器人能够执行更复杂的组合行为。
    -   增强了动作解析的鲁棒性，当找不到 `target_message_id` 时会优雅降级（如 `reply` 变为 `no_action`），并会根据当前实际可用的动作列表对 LLM 的选择进行验证。

2.  **提示词工程与思考模式优化**:
    -   重新设计了核心 Planner 提示词，将 `thinking` 字段定义为“思绪流”，引导 LLM 生成更自然、更符合角色的内心独白，而非简单的决策理由，从而提升决策质量和角色扮演的沉浸感。
    -   强制要求 LLM 为需要目标消息的动作提供 `target_message_id`，提高了动作执行的准确性。

3.  **上下文构建与鲁棒性增强**:
    -   在 `PlanFilter` 中增加了上下文回退机制，当内存中缺少历史消息时（如冷启动），会自动从数据库加载最近的消息记录，确保决策所需上下文的完整性。
    -   简化了提供给 LLM 的未读消息格式，移除了兴趣度分数等内部信息，并加入了用户昵称，使其更易于理解和处理。

4.  **可观测性与日志改进**:
    -   在 AFC 的多个关键节点（消息接收、决策、动作执行）增加了彩色的详细日志，使其决策流程像 HFC 一样清晰可见，极大地方便了调试。
    -   将系统中多个模块（视频分析、兴趣度匹配、情绪管理）的常规日志级别从 `INFO` 调整为 `DEBUG`，以减少在生产环境中的日志噪音。

5.  **动作描述优化**:
    -   优化了 `set_emoji_like` 和 `emoji` 等动作的描述，使其意图更清晰，帮助 LLM 做出更准确的动作选择。

--- a/plugins/set_emoji_like/_manifest.json
+++ b/plugins/set_emoji_like/_manifest.json
@@ -25,7 +25,7 @@
       {
         "type": "action",
         "name": "set_emoji_like",
-        "description": "为消息设置表情回应"
+        "description": "为某条已经存在的消息添加‘贴表情’回应（类似点赞），而不是发送新消息。当用户明确要求‘贴表情’时使用。"
       }
     ],
     "features": [
