--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -255,25 +255,34 @@ max_context_emojis = 30 # 每次随机传递给LLM的表情包详细描述的最
 [memory]
 enable_memory = true # 是否启用记忆系统
 memory_build_interval = 600 # 记忆构建间隔 单位秒   间隔越低，MoFox-Bot学习越多，但是冗余信息也会增多
-memory_build_distribution = [6.0, 3.0, 0.6, 32.0, 12.0, 0.4] # 记忆构建分布，参数：分布1均值，标准差，权重，分布2均值，标准差，权重
-memory_build_sample_num = 8 # 采样数量，数值越高记忆采样次数越多
-memory_build_sample_length = 30 # 采样长度，数值越高一段记忆内容越丰富
-memory_compress_rate = 0.1 # 记忆压缩率 控制记忆精简程度 建议保持默认,调高可以获得更多信息，但是冗余信息也会增多
-
-forget_memory_interval = 3000 # 记忆遗忘间隔 单位秒   间隔越低，MoFox-Bot遗忘越频繁，记忆更精简，但更难学习
-memory_forget_time = 48 #多长时间后的记忆会被遗忘 单位小时
-memory_forget_percentage = 0.008 # 记忆遗忘比例 控制记忆遗忘程度 越大遗忘越多 建议保持默认
-
-consolidate_memory_interval = 1000 # 记忆整合间隔 单位秒   间隔越低，MoFox-Bot整合越频繁，记忆更精简
-consolidation_similarity_threshold = 0.7 # 相似度阈值
-consolidation_check_percentage = 0.05 # 检查节点比例
-
-enable_instant_memory = false # 是否启用即时记忆，测试功能，可能存在未知问题
+enable_instant_memory = true # 是否启用即时记忆
 enable_llm_instant_memory = true # 是否启用基于LLM的瞬时记忆
 enable_vector_instant_memory = true # 是否启用基于向量的瞬时记忆
+enable_enhanced_memory = true # 是否启用增强记忆系统
+enhanced_memory_auto_save = true # 是否自动保存增强记忆
 
-#不希望记忆的词，已经记忆的不会受到影响，需要手动清理
-memory_ban_words = [ "表情包", "图片", "回复", "聊天记录" ]
+min_memory_length = 10 # 最小记忆长度
+max_memory_length = 500 # 最大记忆长度
+memory_value_threshold = 0.7 # 记忆价值阈值，低于该值的记忆会被丢弃
+vector_similarity_threshold = 0.8 # 向量相似度阈值
+semantic_similarity_threshold = 0.6 # 语义重排阶段的最低匹配阈值
+
+metadata_filter_limit = 100 # 元数据过滤阶段返回数量上限
+vector_search_limit = 50 # 向量搜索阶段返回数量上限
+semantic_rerank_limit = 20 # 语义重排阶段返回数量上限
+final_result_limit = 10 # 综合筛选后的最终返回数量
+
+vector_weight = 0.4 # 综合评分中向量相似度的权重
+semantic_weight = 0.3 # 综合评分中语义匹配的权重
+context_weight = 0.2 # 综合评分中上下文关联的权重
+recency_weight = 0.1 # 综合评分中时效性的权重
+
+fusion_similarity_threshold = 0.85 # 记忆融合时的相似度阈值
+deduplication_window_hours = 24 # 记忆去重窗口（小时）
+
+enable_memory_cache = true # 是否启用本地记忆缓存
+cache_ttl_seconds = 300 # 缓存有效期（秒）
+max_cache_size = 1000 # 缓存中允许的最大记忆条数
 
 [voice]
 enable_asr = true # 是否启用语音识别，启用后MoFox-Bot可以识别语音消息，启用该功能需要配置语音识别模型[model.voice]
