--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -1,5 +1,5 @@
 [inner]
-version = "7.1.5"
+version = "7.1.6"
 
 #----以下是给开发人员阅读的，如果你只是部署了MoFox-Bot，不需要阅读----
 #如果你想要修改配置文件，请递增version的值
@@ -207,6 +207,19 @@ max_context_emojis = 30 # 每次随机传递给LLM的表情包详细描述的最
 [memory]
 enable_memory = true # 是否启用记忆系统
 memory_build_interval = 600 # 记忆构建间隔（秒）。间隔越低，学习越频繁，但可能产生更多冗余信息
+
+# === 记忆采样系统配置 ===
+memory_sampling_mode = "immediate" # 记忆采样模式：hippocampus(海马体定时采样)，immediate(即时采样)，all(所有模式)
+
+# 海马体双峰采样配置
+enable_hippocampus_sampling = true # 启用海马体双峰采样策略
+hippocampus_sample_interval = 1800 # 海马体采样间隔（秒，默认30分钟）
+hippocampus_sample_size = 30 # 海马体采样样本数量
+hippocampus_batch_size = 10 # 海马体批量处理大小
+hippocampus_distribution_config = [12.0, 8.0, 0.7, 48.0, 24.0, 0.3] # 海马体双峰分布配置：[近期均值(h), 近期标准差(h), 近期权重, 远期均值(h), 远期标准差(h), 远期权重]
+
+# 即时采样配置
+precision_memory_reply_threshold = 0.5 # 精准记忆回复阈值（0-1），高于此值的对话将立即构建记忆
 
 min_memory_length = 10 # 最小记忆长度
 max_memory_length = 500 # 最大记忆长度
