--- a/template/bot_config_template.toml
+++ b/template/bot_config_template.toml
@@ -122,15 +122,16 @@ allow_reply_self = false # 是否允许回复自己说的话
 max_context_size = 25 # 上下文长度
 thinking_timeout = 40 # MoFox-Bot一次回复最长思考规划时间，超过这个时间的思考会放弃（往往是api反应太慢）
 
-# 消息打断系统配置 - 线性概率模型
+# 消息打断系统配置 - 反比例函数概率模型
 interruption_enabled = true # 是否启用消息打断系统
 interruption_max_limit = 5 # 每个聊天流的最大打断次数
-interruption_min_probability = 0.05 # 最低打断概率（即使达到较高打断次数，也保证有此概率的打断机会）
+interruption_min_probability = 0.05 # 最低打断概率（反比例函数趋近的下限值）
 interruption_afc_reduction = 0.05 # 每次连续打断降低的afc阈值数值
 
 # DEPRECATED: interruption_probability_factor (已废弃的配置项)
-# 新的线性概率模型不再需要复杂的概率因子
-# 公式：打断概率 = max(最低概率, 1.0 - (当前打断次数 / 最大打断次数))
+# 新的反比例函数概率模型不再需要复杂的概率因子
+# 公式：打断概率 = 1.4 / (当前打断次数 + 2.0) + 最低概率
+# 特性：第1次80% → 第2次35% → 第3次15% → 趋近于最低概率
 # interruption_probability_factor = 0.8 # 此配置已废弃，请删除
 
 # 动态消息分发系统配置
